Path planner is D:

--- a/src/main/deploy/pathplanner/settings.json
+++ b/src/main/deploy/pathplanner/settings.json
@@ -1,10 +1,10 @@
 {
-  "robotWidth": 0.8381995473722444,
+  "robotWidth": 0.838,
   "robotLength": 0.838,
   "holonomicMode": true,
   "pathFolders": [
-    "Starting Coral",
-    "Reef Locations"
+    "Reef Locations",
+    "Coral Locations"
   ],
   "autoFolders": [],
   "defaultMaxVel": 4.73,
@@ -12,14 +12,14 @@
   "defaultMaxAngVel": 560.3527,
   "defaultMaxAngAccel": 1718.0,
   "defaultNominalVoltage": 12.0,
-  "robotMass": 60.0,
-  "robotMOI": 8.0,
+  "robotMass": 35.0,
+  "robotMOI": 6.0,
   "robotTrackwidth": 0.5841996845321703,
   "driveWheelRadius": 0.051,
   "driveGearing": 6.75,
   "maxDriveSpeed": 5.0,
   "driveMotorType": "krakenX60",
-  "driveCurrentLimit": 66.0,
+  "driveCurrentLimit": 60.0,
   "wheelCOF": 1.0,
   "flModuleX": 0.273,
   "flModuleY": 0.273,
