--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,12 +5,7 @@ name: Wpilib_Build
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the main branch.
 on:
-  push:
-    branches:
-      - "**"
-
-  pull_request:
-    branches: [main]
+  push
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
