Mostly vision stuff Removed unused imports Added hopefully working vision No more LEDs
Co-authored-by: Sawyer K. <Captagonal@users.noreply.github.com>
Co-authored-by: Connor S. <LavaWolf911@users.noreply.github.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,14 @@
     "edu.wpi.first.math.proto.*",
     "edu.wpi.first.math.**.proto.*",
     "edu.wpi.first.math.**.struct.*",
+  ],
+  "spellright.language": [
+    "en"
+  ],
+  "spellright.documentTypes": [
+    "markdown",
+    "latex",
+    "plaintext",
+    "java"
   ]
 }
