[Working] Sim vision! (the constants were in fact wrong and build.gradle isn't fun)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -65,5 +65,6 @@
     "latex",
     "plaintext"
   ],
-  "wpilib.autoStartRioLog": false
+  "wpilib.autoStartRioLog": false,
+  "wpilib.selectDefaultSimulateExtension": false
 }
