--- a/src/main/deploy/pathplanner/settings.json
+++ b/src/main/deploy/pathplanner/settings.json
@@ -1,34 +1,34 @@
 {
-  "robotWidth": 0.8381995473722444,
-  "robotLength": 0.838,
+  "robotWidth": 0.86,
+  "robotLength": 0.86,
   "holonomicMode": true,
   "pathFolders": [
-    "Starting Coral",
-    "Reef Locations"
+    "Reef Locations",
+    "Coral Locations"
   ],
   "autoFolders": [],
-  "defaultMaxVel": 4.73,
-  "defaultMaxAccel": 10.2,
-  "defaultMaxAngVel": 560.3527,
-  "defaultMaxAngAccel": 1718.0,
+  "defaultMaxVel": 0.5,
+  "defaultMaxAccel": 0.5,
+  "defaultMaxAngVel": 270.0,
+  "defaultMaxAngAccel": 540.0,
   "defaultNominalVoltage": 12.0,
-  "robotMass": 60.0,
-  "robotMOI": 8.0,
+  "robotMass": 54.6,
+  "robotMOI": 6.0,
   "robotTrackwidth": 0.5841996845321703,
   "driveWheelRadius": 0.051,
   "driveGearing": 6.75,
-  "maxDriveSpeed": 5.0,
+  "maxDriveSpeed": 4.73,
   "driveMotorType": "krakenX60",
-  "driveCurrentLimit": 66.0,
+  "driveCurrentLimit": 60.0,
   "wheelCOF": 1.0,
-  "flModuleX": 0.273,
-  "flModuleY": 0.273,
-  "frModuleX": 0.273,
-  "frModuleY": -0.273,
-  "blModuleX": -0.273,
-  "blModuleY": 0.273,
-  "brModuleX": -0.273,
-  "brModuleY": -0.273,
+  "flModuleX": 0.26,
+  "flModuleY": 0.26,
+  "frModuleX": 0.26,
+  "frModuleY": -0.26,
+  "blModuleX": -0.26,
+  "blModuleY": 0.26,
+  "brModuleX": -0.26,
+  "brModuleY": -0.26,
   "bumperOffsetX": 0.0,
   "bumperOffsetY": 0.0,
   "robotFeatures": []
